# wevotelive

server/: .gitignore  CMakeLists.txt  README.md  server.cpp
server/build-linux/: server
website/: package-lock.json  package.json
website/src/: app.html
website/src/lib/: Communication.svelte.ts  Errors.ts  Transitions.ts  types.d.ts
website/src/lib/components/: Card.svelte  GenericSection.svelte  PollBubble.svelte  PollButton.svelte  PollDivider.svelte  PollHeader.svelte  PollPredictionSegment.svelte  PollVoteCard.svelte  PollYouSection.svelte  SvgPenCircle.svelte
website/src/lib/css/: global.css
website/src/routes/: +layout.ts  +page.svelte
website/src/routes/host/: +page.svelte
website/src/routes/join/: +page.svelte  +page.ts
